fix: changed introdcution text

--- a/public/index.html
+++ b/public/index.html
@@ -68,11 +68,21 @@
           <div class="font-bold text-lg">
             INTRODUCTION
           </div>
+        <b class="font-bold"></b>  
           <div class="font-thin">
-            Hello, I am Mahmut. I am a freelance developer. I use python, Javascript and Go,
-            I work as a web developer preferably backend, and game developer who uses Godot.
-            I mostly use Firebase and Google Cloud services for my projects.
-            You can see all my projects below.
+            I am Mahmut, I have worked as a <b class="font-bold">FS web developer</b> before and
+            now I have my company andlooking for contract based
+            jobs or freelance agreements.
+            <br> 
+            I mostly worked with <b class="font-bold">Python</b> and <b class="font-bold">Javascript</b>.
+            <b class="font-bold"> I use Vim</b>.
+            <br>
+            I usually use <b class="font-bold">Python</b>  for automation scripts and local apps. 
+            For my websites i use <b class="font-bold">Javascript</b>  for client side and server side, but learning
+            <b class="font-bold">Typescript</b>  and <b class="font-bold">Go</b>  for <b class="font-bold">Cloud functions</b> .
+            <br>
+            I learn game design and game programming using <b class="font-bold">Pygame</b> .
+            
           </div>
         </div>
       </section>
