fix: cv download option added

--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,14 @@
             I learn game design and game programming using <b class="font-bold">Pygame</b> .
             
           </div>
+
+        <div class="pt-4"><a target="_blank"></a>
+          <button>
+            <a href="./download/Mahmut-Seliz-CV.pdf" download="Mahmut-Seliz-CV.pdf">     
+              <i width=100px class="fa-solid fa-download text-2xl"></i>
+            </a>
+            </button>
+        </div>
         </div>
       </section>
     </div>
