--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,7 @@
 
         <div class="pt-4"><a target="_blank"></a>
           <button>
+            Download CV
             <a href="./download/Mahmut-Seliz-CV.pdf" download="Mahmut-Seliz-CV.pdf">     
               <i width=100px class="fa-solid fa-download text-2xl"></i>
             </a>
