--- a/public/index.html
+++ b/public/index.html
@@ -85,13 +85,11 @@
             
           </div>
 
-        <div class="pt-4"><a target="_blank"></a>
-          <button>
+        <div class="pt-4">
             Download CV
             <a href="./download/Mahmut-Seliz-CV.pdf" download="Mahmut-Seliz-CV.pdf">     
               <i width=100px class="fa-solid fa-download text-2xl"></i>
             </a>
-            </button>
         </div>
         </div>
       </section>
