fix: padding doesnt work

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
         <div class="pt-4">
             Download CV
             <a href="./download/Mahmut-Seliz-CV.pdf" download="Mahmut-Seliz-CV.pdf">     
-              <i width=100px class="fa-solid fa-download text-2xl"></i>
+              <i class="fa-solid fa-download text-2xl"></i>
             </a>
         </div>
         </div>
