--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
   
   <title> Mahnuser - Projects </title>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6L7T4R1Q8K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6L7T4R1Q8K');
+</script>
+
   <!-- update the version number as needed -->
   <link rel="stylesheet" href="./dist/main.css">
   <!-- <link rel="stylesheet" href="./dist/output.css"> -->
@@ -87,7 +97,7 @@
 
         <div class="pt-4">
             Download CV
-            <a href="./download/Mahmut-Seliz-CV.pdf" download="Mahmut-Seliz-CV.pdf">     
+            <a href="./download/Mahmut-Seliz-CV.pdf" download="Mahmut-Seliz-CV.pdf" id="download-cv" >     
               <i class="fa-solid fa-download text-2xl"></i>
             </a>
         </div>
