fix: clouds on night

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
     <div
       class="text-center text-black dark:text-myDark-100 w-80 max-w-sm sm:w-full md:max-w-md  lg:max-w-xl xl:max-w-2xl mx-auto ">
       <section class="h-screen grid place-items-center">
-        <div class="flex flex-wrap justify-center mt-8">
+        <div class="flex flex-wrap justify-center mt-8 pt-20">
           <div class="font-bold text-lg">
             INTRODUCTION
           </div>
@@ -118,22 +118,37 @@
 
   <!-- Background Stars -->
 
-  <div class="dark:flex">
-    <span class="cloud-1 cloud-animation dark:star dark:w-2 dark:h-2 dark:top-40 dark:left-52"></span>
-    <span class="cloud-2 cloud-animation dark:star dark:w-2 dark:h-2 dark:top-[253px] dark:right-[140px]"></span>
-    <span class="cloud-3 cloud-animation dark:star dark:w-2 dark:h-2 dark:dark:top-3/4 dark:left-[140px]"></span>
-    <span class="cloud-bottom-1 cloud-animation dark:hidden"> </span>
-    <span class="cloud-4 cloud-animation dark:star dark:star-animation dark:top-2/4 dark:left-1/2 dark:star-delay-1"></span>
-    <span class="cloud-5 cloud-animation dark:star dark:star-animation dark:top-3/4 dark:left-1/3 dark:star-delay-3"></span>
-    <span class="cloud-6 cloud-animation dark:star dark:star-animation dark:top-1/4 dark:left-80 dark:star-delay-2"></span>
-    <span class="cloud-7 cloud-animation dark:star dark:star-animation dark:top-40 dark:left-52 dark:star-delay-4"></span>
-    <span class="cloud-bottom-2 cloud-animation dark:hidden"> </span>
-    <span class="cloud-8 cloud-animation dark:star dark:star-animation dark:top-40 dark:right-52 dark:star-delay-5"></span>
-    <span class="cloud-9 cloud-animation dark:star dark:star-animation dark:top-[846px] dark:right-[232px] dark:star-delay-2"></span>
-    <span class="cloud-10 cloud-animation dark:hidden"> </span>
-    <span class="cloud-bottom-3 cloud-animation dark:hidden"></span>
+  <div class="hidden dark:flex">
+    <span class="star w-2 h-2 top-40 left-52"></span>
+    <span class="2  star w-2 h-2 top-[253px] right-[140px]"></span>
+    <span class="3  star w-2 h-2 top-3/4 left-[140px]"></span>
+    <span class="star star-animation top-2/4 left-1/2 star-delay-1"></span>
+    <span class="star star-animation top-3/4 left-1/3 star-delay-3"></span>
+    <span class="star star-animation top-1/4 left-80 star-delay-2"></span>
+    <span class="star star-animation top-40 left-52 star-delay-4"></span>
+    <span class="star star-animation top-40 right-52 star-delay-5"></span>
+    <span class="star star-animation top-[846px] right-[232px] star-delay-2"></span>
+    <span class="hidden"> </span>
   </div>
 
+
+  <!-- Background Clouds -->
+
+  <div class="dark:hidden">
+    <span class="cloud-1 cloud-animation "></span>
+    <span class="cloud-2 cloud-animation "></span>
+    <span class="cloud-3 cloud-animation  "></span>
+    <span class="cloud-bottom-1 cloud-animation"> </span>
+    <span class="cloud-4 cloud-animation "></span>
+    <span class="cloud-5 cloud-animation "></span>
+    <span class="cloud-6 cloud-animation "></span>
+    <span class="cloud-7 cloud-animation "></span>
+    <span class="cloud-bottom-2 cloud-animation "> </span>
+    <span class="cloud-8 cloud-animation "></span>
+    <span class="cloud-9 cloud-animation "></span>
+    <span class="cloud-10 cloud-animation "> </span>
+    <span class="cloud-bottom-3 cloud-animation"></span>
+  </div>
 
   <!-- Projects Section -->
   <div class="bg-myLight-200 dark:bg-transparent text-myLight-900 pt-[140px] relative pb-[20px]">
