--- a/public/index.html
+++ b/public/index.html
@@ -82,19 +82,25 @@
           </div>
           <b class="font-bold"></b>
           <div class="font-thin">
-            I am Mahmut, I have worked as a <b class="font-bold">FS web developer</b> before and
-            now I have my company andlooking for contract based
-            jobs or freelance agreements.
+            I am Mahmut, I have worked as a <b class="font-bold">FS web developer</b> and
+            now I have my company and working as a freelancer.
             <br>
-            I mostly worked with <b class="font-bold">Python</b> and <b class="font-bold">Javascript</b>.
+            I mainly working with <b class="font-bold">Python</b> and <b class="font-bold">Javascript</b> to create <b class="font-bold">web crawlers & scrapers</b>, <b class="font-bold">automation bots</b>, <b class="font-bold">browser extensions</b>   but also I create websites by using <b class="font-bold"> Django </b> or <b class="font-bold"> Firebase. </b>
+            <br>
+            I design & develop or <b class="font-bold">  integrate APIs </b> for those websites.
+            <br>
             <b class="font-bold"> I use Vim</b>.
             <br>
-            I usually use <b class="font-bold">Python</b> for automation scripts and local apps.
-            For my websites i use <b class="font-bold">Javascript</b> for client side and server side, but learning
-            <b class="font-bold">Typescript</b> and <b class="font-bold">Go</b> for <b class="font-bold">Cloud
-              functions</b> .
+            I also create desktop applications & scripts with <b class="font-bold">Python</b> and 
+            <b class="font-bold"> PyQt5.</b>
             <br>
-            I learn game design and game programming using <b class="font-bold">Pygame</b> .
+            I am <b class="font-bold"> pationate learner</b> who finds motivation by learning new things and looking for jobs
+            that <b class="font-bold"> will push me forward</b>. 
+            <br>
+            You can read more on my CV in the link below. 
+            <br>
+            Do not hesitate me to 
+        <b class="font-bold"> <a class="hover:underline hover:cursor-pointer" href="mailTo:mahmutseliz26@gmail.com"> contact </a> </b> for anything. 
 
           </div>
 
@@ -109,7 +115,7 @@
     </div>
 
     <!-- Seperator Curve -->
-    <div class="dark:hidden custom-shape-divider-top-1671117377">
+    <div class="dark:hidden custom-shape-divider-top-1671117377 mt-20">
       <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
         <path
           d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
@@ -154,7 +160,7 @@
   </div>
 
   <!-- Projects Section -->
-  <div class="bg-myLight-200 dark:bg-transparent text-myLight-900 pt-[140px] relative pb-[20px]">
+  <div class="bg-myLight-200 dark:bg-transparent text-myLight-900 pt-[140px] relative pb-[20px] mt-20">
     <div class=" mx-auto text-center ">
       <div class="hide mx-auto font-bold text-2xl">
         <span class=""> PROJECTS </span>
