--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
           </div>
           <b class="font-bold"></b>
           <div class="font-thin">
+            <b class="font-bold"> I use Vim</b>. <br>
             I am Mahmut, I have worked as a <b class="font-bold">FS web developer</b> and
             now I have my company and working as a freelancer.
             <br>
@@ -89,7 +90,6 @@
             <br>
             I design & develop or <b class="font-bold">  integrate APIs </b> for those websites.
             <br>
-            <b class="font-bold"> I use Vim</b>.
             <br>
             I also create desktop applications & scripts with <b class="font-bold">Python</b> and 
             <b class="font-bold"> PyQt5.</b>
